--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
   
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+
+    <link media="all" type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/css/foundation-flex.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.2.2/web-animations.min.js"></script>
   <meta charset="utf-8">
   <title>AngularSticky</title>
   <base href="/">
@@ -15,7 +18,7 @@
 <body>
 
   
-  <app-root></app-root>
+  <app-root><div class="loading"></div></app-root>
 
   
 </body>
